<resources>
    <string name="app_name">Remedy</string>

    <string name="search_box_hint">What Are you looking For?</string>

<!--    menu name or heading title -->
    <string name="category">Category</string>
    <string name="see_more">See More</string>
    <string name="user_name">User name</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="retry">Retry</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="full_number">Full name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="restaurants">Medicine Shop</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="recommended_product">Top Medicine</string>
    <string name="product">Product name</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="loading">Loading</string>
    <string name="taka">৳</string>
    <string name="toolbar_title">Title</string>
    <string name="sing_up">Signup</string>
    <string name="place_order">Place Order</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="continue_text">Continue</string>
    <string name="resend">Resend Code</string>
    <string name="verification">Verification</string>
    <string name="order_placed">Order Placed!</string>
    <string name="order_placed_history">Order Placed</string>
    <string name="order_processing">Processing</string>
    <string name="order_delivering">Delivering</string>
    <string name="delivered">Delivered</string>
    <string name="order_picked">Order Picked by Rider</string>
    <string name="one_step_away">Just One Step Away.</string>
    <string name="enter_otp">Enter the 6 digit code sent to your number</string>
    <string name="enter_phone">Please Enter Your Phone Number</string>
    <string name="add_new_address">Add new address</string>
    <string name="house_no">House No</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="floor_no">Apt/Floor No</string>
    <string name="street_no">Street/Block/Sector No</string>
    <string name="area">Area</string>
    <string name="upazila">Upazila/Thana</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="pin_location">Pin Your Location(Optional)</string>
    <string name="save_address">Save Address</string>
    <string name="default_address">Make it default address</string>
    <string name="radio_home">HOME</string>
    <string name="radio_office">OFFICE</string>
    <string name="radio_other">OTHER</string>
    <string name="address_type">Choose address type</string>
    <string name="country_code">+88</string>
    <string name="term_and_condition">By creating an account, you agree to our<br> </br><b>Terms of Service</b> and <b>Privacy Policy</b></string>

    <string name="favourite">Favourite</string>
    <string name="order_history">Order History</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total Payable</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="enter_coupon">Enter coupon code</string>
    <string name="coupon">Best coupon for you</string>
    <string name="change">Change</string>
    <string name="apply">Apply</string>
    <string name="remove">Remove</string>
    <string name="charge">Charge</string>
    <string name="coupons">Coupon</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="faq">FAQs</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="call_center">Customer care</string>
    <string name="email_center">Contact us: remedyms21@gmail.com</string>
    <string name="no_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sing_in">Connect with us</string>
    <string name="sing_up_with_other">Try Sign up With Other Ways</string>
    <string name="sign_in">Already have an account?</string>
    <string name="no_result_found">No Result Found</string>
    <string name="see_review">See Reviews</string>
    <string name="view_all">View All</string>
    <string name="rating">Ratings</string>
    <string name="product_title">Product title</string>
    <string name="qty">Qty</string>
    <string name="product_unit">Product unit</string>
    <string name="product_price">Product price</string>
    <string name="details">Overview</string>
    <string name="related_product">Related Product</string>
    <string name="specifications_features">specifications features</string>
    <string name="direction_for_use">Direction for use</string>
    <string name="safety_information">Safety information</string>
    <string name="regular_delivery">Regular delivery</string>
    <string name="express_delivery">Express delivery</string>
    <string name="bkash_payment">Pay With Bkash</string>
    <string name="bkash_payment_sub">Use your Bkash account and Its Secure.</string>
    <string name="nagad_payment">Pay With Nagad</string>
    <string name="nagad_payment_sub">Use your Nagad account and Its Secure.</string>
    <string name="card_payment">Pay With Card</string>
    <string name="card_payment_sub">Pay with MasterCard, Visa or Visa Electron.</string>
    <string name="cod">Cash On Delivery</string>
    <string name="cod_sub">Make payment while received product</string>

    <string name="connect_to_internet">Connect to the internet</string>
    <string name="offline">You\'re offline. Check your connection</string>

<!--    TextView title string-->
    <string name="offer_product">Offer Product</string>
    <string name="call_to_order">Call To Order</string>
    <string name="health_product">All Product</string>
    <string name="cashback_demo_text">Up to 10% Discount</string>
    <string name="search_here">Search Here</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
</resources>