<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/shadowView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/ten"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ofline"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/twenty"
            android:padding="@dimen/five"
            android:text="@string/connect_to_internet"
            style="@style/PlayFairBold"
            android:layout_marginTop="@dimen/ten"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fifteen"
            android:padding="@dimen/five"
            android:text="@string/offline"
            style="@style/RobotoRegular"
            android:textColor="@color/colorA"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fifteen"
            android:paddingStart="@dimen/twentyFive"
            android:paddingEnd="@dimen/twentyFive"
            android:paddingTop="@dimen/five"
            android:paddingBottom="@dimen/five"
            android:text="@string/retry"
            style="@style/RobotoRegular"
            android:background="@drawable/bg_button_red"
            android:layout_marginTop="@dimen/ten"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>